// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NumberBox Component should render active class name when isMultipliable 1`] = `
<li
  className="grid-item active "
  onClick={[MockFunction]}
  role="button"
>
  10
</li>
`;

exports[`NumberBox Component should render selected class name when isSelected 1`] = `
<li
  className="grid-item  selected"
  onClick={[MockFunction]}
  role="button"
>
  10
</li>
`;

exports[`NumberBox Component should render snapshot with default props 1`] = `
<li
  className="grid-item  "
  onClick={[MockFunction]}
  role="button"
>
  10
</li>
`;
